I defined the basic boilerplate of the API calls using Redux Toolkit Query

--- a/client/src/styles/App.css
+++ b/client/src/styles/App.css
@@ -1,1 +1,6 @@
+/* ----------------------------------------------------------------------------------------------
+App.css
+This file contains all the styles of the application
+------------------------------------------------------------------------------------------------- */
+
 @import "tailwindcss";
