--- a/client/src/styles/App.css
+++ b/client/src/styles/App.css
@@ -22,12 +22,16 @@ input:-webkit-autofill,
 input:-webkit-autofill:hover,
 input:-webkit-autofill:focus,
 input:-webkit-autofill:active {
-  /* 1. Paint over the white background with your dark theme color */
   -webkit-box-shadow: 0 0 0 30px hsl(black) inset !important;
 
-  /* 2. Force the text to be your light foreground color */
   -webkit-text-fill-color: hsl(var(--foreground)) !important;
 
-  /* 3. Maintain the border radius if needed */
   transition: background-color 5000s ease-in-out 0s;
+}
+
+@layer base {
+  button:not(:disabled),
+  [role="button"]:not(:disabled) {
+    cursor: pointer;
+  }
 }
