--- a/client/src/styles/App.css
+++ b/client/src/styles/App.css
@@ -20,6 +20,14 @@ body {
   min-height: 100vh;
 }
 
+#root {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 input:-webkit-autofill,
 input:-webkit-autofill:hover,
 input:-webkit-autofill:focus,
