--- a/client/src/styles/App.css
+++ b/client/src/styles/App.css
@@ -6,6 +6,7 @@
   --background: 240 47% 7%;
   --foreground: 214 32% 91%;
   --contrastBackgound: 240 47% 8%;
+  height: 100%;
 }
 
 @theme {
@@ -17,15 +18,19 @@
 body {
   background-color: var(--color-background);
   color: var(--color-foreground);
-  min-height: 100vh;
+  width: 100%;
+  min-height: 100%;
+  min-height: 100dvh;
+  margin: 0;
+  display: flex;
+  flex-direction: column;
 }
 
 #root {
   width: 100%;
   height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  flex: 1;
+  width: 100%;
 }
 
 input:-webkit-autofill,
